# project-cpp

./: .clang-format  .gitignore  CMakeLists.txt  README.md  project-cpp.sln
.github/workflows/: gemini-review.yml
Engine/: CMakeLists.txt  Engine.vcxproj  Engine.vcxproj.filters
Engine/Core/: Application.cpp  Application.hpp  GameClock.cpp  GameClock.hpp  Window.cpp  Window.hpp
Engine/Entity/: Entity.hpp  MovingEntity.cpp  MovingEntity.hpp
Engine/Events/: EventBus.cpp  EventBus.hpp  EventTypes.hpp
Engine/Input/: Command.hpp  InputManager.cpp  InputManager.hpp
Engine/Math/: Random.cpp  Random.hpp
Engine/Resources/: AudioManager.cpp  AudioManager.hpp  FontManager.cpp  FontManager.hpp  TextureManager.cpp  TextureManager.hpp
Engine/State/: State.hpp  StateMachine.cpp  StateMachine.hpp
Engine/Utilities/: Logger.cpp  Logger.hpp  Logger.inl  Timer.cpp  Timer.hpp
Pong/: Pong.vcxproj
Timber/: CMakeLists.txt  Timber.cpp  Timber.vcxproj  Timber.vcxproj.filters  main.cpp
Timber/Config/: Constants.hpp
Timber/Entities/: Bee.cpp  Bee.hpp  Branch.cpp  Branch.hpp  Cloud.cpp  Cloud.hpp  Player.cpp  Player.hpp
Timber/States/: PlayState.cpp  PlayState.hpp
Timber/Systems/: BranchSystem.cpp  BranchSystem.hpp  ScoreSystem.cpp  ScoreSystem.hpp  TimeSystem.cpp  TimeSystem.hpp
Timber/UI/: HUD.cpp  HUD.hpp  TimeBar.cpp  TimeBar.hpp
